- adding async property to the <script> tag for fontawesome

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <script src="https://kit.fontawesome.com/9e5ddf5e96.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/9e5ddf5e96.js" crossorigin="anonymous" async></script>
 
   <title>User Story Mapping</title>
 </head>
